--- a/src/main/resources/com/hkrsdgroup/agileproduct/create-profile.fxml
+++ b/src/main/resources/com/hkrsdgroup/agileproduct/create-profile.fxml
@@ -29,7 +29,7 @@
       </Button>
       <Text layoutX="167.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course" />
       <TextField fx:id="courseName" layoutX="301.0" layoutY="264.0" />
-      <Button layoutX="49.0" layoutY="334.0" mnemonicParsing="false" onAction="#onReturnClick" text="Return">
+      <Button layoutX="49.0" layoutY="334.0" mnemonicParsing="false" onAction="#onCancelClick" text="Cancel">
          <font>
             <Font size="14.0" />
          </font>
