--- a/src/main/resources/com/hkrsdgroup/agileproduct/table-view.fxml
+++ b/src/main/resources/com/hkrsdgroup/agileproduct/table-view.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -6,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hkrsdgroup.agileproduct.TableController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hkrsdgroup.agileproduct.TableController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
@@ -15,12 +16,12 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <TableView id="Table" fx:id="Table" layoutX="-5.0" prefHeight="399.0" prefWidth="640.0">
+            <TableView id="Table" fx:id="Table" editable="true" layoutX="-5.0" prefHeight="399.0" prefWidth="640.0">
               <columns>
-                <TableColumn fx:id="Id" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="Activity" prefWidth="150.0" text="Activity" />
-                  <TableColumn fx:id="Time" prefWidth="75.0" text="Time" />
-                  <TableColumn fx:id="State" prefWidth="75.0" text="State" />
+                <TableColumn fx:id="Id" editable="false" prefWidth="75.0" text="Id" />
+                <TableColumn fx:id="Activity" editable="false" prefWidth="150.0" text="Activity" />
+                <TableColumn fx:id="Time" editable="false" prefWidth="75.0" text="Time" />
+                <TableColumn fx:id="State" prefWidth="75.0" sortable="false" text="State" />
               </columns>
             </TableView>
       </children>
