--- a/src/main/resources/com/hkrsdgroup/agileproduct/create-profile.fxml
+++ b/src/main/resources/com/hkrsdgroup/agileproduct/create-profile.fxml
@@ -18,9 +18,9 @@
       <Text layoutX="154.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sleep Hours" />
       <TextField fx:id="workoutType" layoutX="301.0" layoutY="148.0" />
       <TextField fx:id="studyHour" layoutX="301.0" layoutY="187.0" />
-      <Text layoutX="141.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type of Workout" />
-      <Text layoutX="135.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Hour to study" />
-      <Text layoutX="130.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start minute to study" />
+      <Text layoutX="156.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Self Activity " wrappingWidth="123.33331298828125" />
+      <Text layoutX="156.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Hour to study" />
+      <Text layoutX="151.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start minute to study" />
       <TextField fx:id="studyMinute" layoutX="301.0" layoutY="225.0" />
       <Button layoutX="268.0" layoutY="332.0" mnemonicParsing="false" onAction="#onSubmitClick" text="Submit">
          <font>
