--- a/src/main/resources/com/hkrsdgroup/agileproduct/table-view.fxml
+++ b/src/main/resources/com/hkrsdgroup/agileproduct/table-view.fxml
@@ -17,15 +17,15 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <TableView id="Table" fx:id="Table" editable="true" layoutX="1.0" prefHeight="369.0" prefWidth="634.0">
+            <TableView id="Table" fx:id="Table" editable="true" layoutX="3.0" layoutY="-19.0" prefHeight="369.0" prefWidth="634.0">
               <columns>
                 <TableColumn fx:id="Id" editable="false" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="Activity" editable="false" prefWidth="150.0" text="Activity" />
+                <TableColumn fx:id="Activity" editable="false" prefWidth="250.0" text="Activity" />
                 <TableColumn fx:id="Time" editable="false" prefWidth="75.0" text="Time" />
                 <TableColumn fx:id="State" prefWidth="75.0" sortable="false" text="State" />
               </columns>
             </TableView>
-            <Button layoutX="14.0" layoutY="369.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="25.0" prefWidth="69.0" text="Back" />
+            <Button layoutX="296.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="25.0" prefWidth="69.0" text="Return" />
       </children>
     </AnchorPane>
   </children>
